# first-officer

./: .rules  .typos.toml  Cargo.toml  Containerfile  Dockerfile  PLAN.md  README.md  release.toml  test_thinking
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  typos.yml
src/: auth.rs  main.rs  rename.rs  state.rs  translate.rs
src/auth/: cache.rs  extract.rs  resolve.rs  token.rs
src/copilot/: api.rs  client.rs  types.rs
src/routes/: completions.rs  health.rs  messages.rs  mod.rs  models.rs
src/translate/: mod.rs  request.rs  response.rs  stream.rs  thinking.rs  types.rs
