[package]
name = "first-officer"
version = "0.1.6"
edition = "2024"
license = "Apache-2.0 OR MIT"
publish = false

[dependencies]
anyhow = "1.0.101"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros"] }
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }
